@@ -170,6 +170,7 @@ Known values for OPTION are:
   [--setgroups]
   [--utf8]
   [--hide-host]
+  [--barelf]
   --default-domain=domain
 
  Installs a new queue with a SMTP Listener
@@ -279,6 +280,7 @@ Known values for OPTION are:
   setgroups      - Add addition supplementary groups
   utf8           - Enable Email Address Internationalization Support (SMTPUTF8)
   hide-host      - Skip host names and IP addresses in received headers
+  barelf         - Convert bare LF into CRLF
 
 --delivery=ident --qbase=queue_path --qcount=N --qstart=I
   --servicedir=service_path
