@@ -138,6 +138,9 @@ o - New program printass to print entries in users/cdb, users/assign file
 77. svctool: added --death argument to configure max time in secs that
     qmail-queue can run
 78. svctool: create DEATH, OSSIFIED variables as global variables
+79. svctool: added option to set env variable ALLOW_BARELF for qmail-smtpd to
+    convert bare LF into CRLF
+80. smtpd.c: Convert bare LF into CRLF if env variable ALLOW_BARELF is set
 
 * Tue Oct 17 2023 18:34:04 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.5-1.1%{?dist}
 Release 3.0.5-1.1 Start 11/09/2023 End 17/10/2023
